unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Percent_Revenue_Tax_Free__c.field-meta.xml
<CustomField>
    <fullName>Percent_Revenue_Tax_Free__c</fullName>
    <formula>IF(AND(Pecent_of_Business_is_Tax_Free__c &gt; 0, Pecent_of_Business_is_Tax_Free__c  &lt;= 5), 1,
IF(AND(Pecent_of_Business_is_Tax_Free__c &gt; 5, Pecent_of_Business_is_Tax_Free__c  &lt;= 10), 2,
IF(AND(Pecent_of_Business_is_Tax_Free__c &gt; 10, Pecent_of_Business_is_Tax_Free__c  &lt;= 20), 3,
IF(AND(Pecent_of_Business_is_Tax_Free__c &gt; 20, Pecent_of_Business_is_Tax_Free__c  &lt;= 30), 4,
IF(Pecent_of_Business_is_Tax_Free__c &gt; 30, 5, 0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Revenue Tax Free</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>