unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Planet_Consultancy__c.field-meta.xml
<CustomField>
    <fullName>Planet_Consultancy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planet Consultancy</label>
    <type>Checkbox</type>
</CustomField>