unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Planet_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Planet_Intelligence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planet Intelligence</label>
    <type>Checkbox</type>
</CustomField>