unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Planet_Intelligence_Beneficial__c.field-meta.xml
<CustomField>
    <fullName>Planet_Intelligence_Beneficial__c</fullName>
    <inlineHelpText>Is Planet Intelligence reporting information beneficial to you and/or your staff? 5 means very beneficial, 1 not beneficial at all.</inlineHelpText>
    <label>Planet Intelligence Beneficial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>