unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Planet_Intelligence_BeneficialR__c.field-meta.xml
<CustomField>
    <fullName>Planet_Intelligence_BeneficialR__c</fullName>
    <formula>VALUE(TEXT( Planet_Intelligence_Beneficial__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planet Intelligence Beneficial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>