unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Planet_Intelligence_Head_Office__c.field-meta.xml
<CustomField>
    <fullName>Planet_Intelligence_Head_Office__c</fullName>
    <formula>( Strategy_to_Increase_FootfallR__c + Identify_Missed_Revenue_OpportunitiesR__c + Considered_Planet_s_Marketing_OfferingR__c +  Utilise_Planet_IntelligenceR__c + Percent_Revenue_Tax_Free__c + Interested_in_a_Targeted_ProposalR__c + Planet_Intelligence_with_Other_ReportsR__c + Gaps_in_the_Information_ProvidedR__c) / 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planet Intelligence Head Office</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>