unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Planet_Intelligence_Management__c.field-meta.xml
<CustomField>
    <fullName>Planet_Intelligence_Management__c</fullName>
    <formula>(Staff_Cultural_Sales_TrainingR__c + Do_You_Use_This_InformationR__c +  Planet_Intelligence_BeneficialR__c) / 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planet Intelligence Management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>