unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Planet_Intelligence_Staff__c.field-meta.xml
<CustomField>
    <fullName>Planet_Intelligence_Staff__c</fullName>
    <formula>Usefullness_of_CollateralR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planet Intelligence Staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>