unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Planet_Intelligence_with_Other_Reports__c.field-meta.xml
<CustomField>
    <fullName>Planet_Intelligence_with_Other_Reports__c</fullName>
    <inlineHelpText>Is Planet Intelligence reporting reviewed in conjunction with other reports? 5 often used with other reports, 1 not used with other reports.</inlineHelpText>
    <label>Planet Intelligence with Other Reports?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>