unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Planet_Intelligence_with_Other_ReportsR__c.field-meta.xml
<CustomField>
    <fullName>Planet_Intelligence_with_Other_ReportsR__c</fullName>
    <formula>VALUE(TEXT( Planet_Intelligence_with_Other_Reports__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planet Intelligence with Other Reports?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>