unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Quick_to_Respond_to_Queries__c.field-meta.xml
<CustomField>
    <fullName>Quick_to_Respond_to_Queries__c</fullName>
    <inlineHelpText>How quick are we to respond to queries? 5 equals very quick, 1 is very slow.</inlineHelpText>
    <label>Quick to Respond to Queries?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>