unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Quick_to_Respond_to_QueriesR__c.field-meta.xml
<CustomField>
    <fullName>Quick_to_Respond_to_QueriesR__c</fullName>
    <formula>VALUE(TEXT( Quick_to_Respond_to_Queries__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quick to Respond to Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>