unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Rebate_Part_of_Profitability__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Part_of_Profitability__c</fullName>
    <inlineHelpText>Does the TF Rebate form part of your store income/profitability? 5 means very much so, 1 not at all.</inlineHelpText>
    <label>Rebate Part of Profitability?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>