unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Rebate_Part_of_ProfitabilityR__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Part_of_ProfitabilityR__c</fullName>
    <formula>VALUE(TEXT( Rebate_Part_of_Profitability__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rebate Part of Profitability?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>