unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Regular_Visits__c.field-meta.xml
<CustomField>
    <fullName>Regular_Visits__c</fullName>
    <inlineHelpText>Does your account manager visit the store with appropriate regularity? 5 is very appropriate, 1 not appropriate at all.</inlineHelpText>
    <label>Regular Visits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>