unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Regular_VisitsR__c.field-meta.xml
<CustomField>
    <fullName>Regular_VisitsR__c</fullName>
    <formula>VALUE(TEXT( Regular_Visits__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regular Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>