unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/RelationshipR__c.field-meta.xml
<CustomField>
    <fullName>RelationshipR__c</fullName>
    <formula>VALUE(TEXT( Relationship__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>