unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Reliability__c.field-meta.xml
<CustomField>
    <fullName>Reliability__c</fullName>
    <inlineHelpText>How would you rate our tax free solution in terms of reliability? 5 very reliable, 1 not reliable at all.</inlineHelpText>
    <label>Reliability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>