unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/ReliabilityR__c.field-meta.xml
<CustomField>
    <fullName>ReliabilityR__c</fullName>
    <formula>VALUE(TEXT(Reliability__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reliability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>