unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Sales_Process_Disruption__c.field-meta.xml
<CustomField>
    <fullName>Sales_Process_Disruption__c</fullName>
    <inlineHelpText>What are the stages of service that disrupt the sales process?</inlineHelpText>
    <label>Sales Process Disruption</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>