unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/See_Business_3_5_Years_From_Now__c.field-meta.xml
<CustomField>
    <fullName>See_Business_3_5_Years_From_Now__c</fullName>
    <inlineHelpText>Where do you see your business 3 - 5 years from now - given current changes in retail industry?</inlineHelpText>
    <label>See Business 3-5 Years From Now?</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>