unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Service_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery__c</fullName>
    <inlineHelpText>How would you rate service delivery of your Planet Account Manager? 5 is excellent 1 is poor.</inlineHelpText>
    <label>Service Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>