unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Service_DeliveryR__c.field-meta.xml
<CustomField>
    <fullName>Service_DeliveryR__c</fullName>
    <formula>VALUE(TEXT( Service_Delivery__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Delivery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>