unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Service_Head_Office__c.field-meta.xml
<CustomField>
    <fullName>Service_Head_Office__c</fullName>
    <formula>Outlook_For_The_Next_12_36_MonthsR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Head Office</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>