unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Service_Management__c.field-meta.xml
<CustomField>
    <fullName>Service_Management__c</fullName>
    <formula>(Delivered_on_CommitmentR__c + Tax_Free_POS_ProcessR__c) / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>