unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Service_Staff__c.field-meta.xml
<CustomField>
    <fullName>Service_Staff__c</fullName>
    <formula>(Service_DeliveryR__c + Logistic_ServiceR__c + RelationshipR__c + Regular_VisitsR__c) / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>