unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Shop_Management_Experience_Score__c.field-meta.xml
<CustomField>
    <fullName>Shop_Management_Experience_Score__c</fullName>
    <formula>Staff_Confident_Offering_Tax_FreeR__c + Training_Inline_With_TurnoverR__c + Training_for_New_HiresR__c + Rebate_Part_of_ProfitabilityR__c + Ease_of_UseR__c + ReliabilityR__c + Quick_to_Respond_to_QueriesR__c + How_Quickly_Was_the_Issue_ResolvedR__c + Any_Stages_That_Disrupt_POS_ProcessR__c + Staff_Cultural_Sales_TrainingR__c + Do_You_Use_This_InformationR__c + Planet_Intelligence_BeneficialR__c + Delivered_on_CommitmentR__c + Tax_Free_POS_ProcessR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shop Management Experience Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>