unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Shop_Management_Experience_Value__c.field-meta.xml
<CustomField>
    <fullName>Shop_Management_Experience_Value__c</fullName>
    <formula>IF(AND(Shop_Management_Experience_ScoreR__c &gt; 0, Shop_Management_Experience_ScoreR__c  &lt;= 21), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcl&quot;, &quot;Red&quot;,25, 25), 
IF(AND(Shop_Management_Experience_ScoreR__c  &gt; 21, Shop_Management_Experience_ScoreR__c  &lt;= 43), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcq&quot;, &quot;Amber&quot;,25, 25), 
IF(Shop_Management_Experience_ScoreR__c  &gt; 43, IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcv&quot;, &quot;Green&quot;,25, 25), IMAGE(&quot;/servlet/servlet.FileDownload?file=0151o000005ZuOI&quot;, &quot;No Status&quot;, 25, 25))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shop Management Experience Value</label>
    <type>Text</type>
</CustomField>