unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Shop_Staff_Experience_Score__c.field-meta.xml
<CustomField>
    <fullName>Shop_Staff_Experience_Score__c</fullName>
    <formula>Confident_Offering_Tax_Free_ShoppingR__c + Challenges_with_Tax_FreeR__c + Used_Planet_s_Technical_SupportR__c + What_Was_Your_ExperienceR__c + How_Quickly_Could_You_Reach_UsR__c + How_Quickly_Was_the_Issue_ResolvedR__c + Usefullness_of_CollateralR__c + Service_DeliveryR__c + Logistic_ServiceR__c + RelationshipR__c + Regular_VisitsR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shop Staff Experience Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>