unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Shop_Staff_Experience_ScoreR__c.field-meta.xml
<CustomField>
    <fullName>Shop_Staff_Experience_ScoreR__c</fullName>
    <label>Shop Staff Experience ScoreR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>