unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Shop_Staff_Experience_Value__c.field-meta.xml
<CustomField>
    <fullName>Shop_Staff_Experience_Value__c</fullName>
    <formula>IF(AND(Shop_Staff_Experience_ScoreR__c &gt; 0, Shop_Staff_Experience_ScoreR__c &lt;= 18), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcl&quot;, &quot;Red&quot;,25, 25), 
IF(AND(Shop_Staff_Experience_ScoreR__c  &gt; 18, Shop_Staff_Experience_ScoreR__c &lt;= 36), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcq&quot;, &quot;Amber&quot;,25, 25), 
IF(Shop_Staff_Experience_ScoreR__c &gt; 36, IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcv&quot;, &quot;Green&quot;,25, 25), IMAGE(&quot;/servlet/servlet.FileDownload?file=0151o000005ZuOI&quot;, &quot;No Status&quot;, 25, 25))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shop Staff Experience Value</label>
    <type>Text</type>
</CustomField>