unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Staff_Confident_Offering_Tax_Free__c.field-meta.xml
<CustomField>
    <fullName>Staff_Confident_Offering_Tax_Free__c</fullName>
    <inlineHelpText>Are your staff confident offering Tax Free shopping to customers?  5 being the best, 1 the worst.</inlineHelpText>
    <label>Staff Confident Offering Tax Free?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>