unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Staff_Confident_Offering_Tax_FreeR__c.field-meta.xml
<CustomField>
    <fullName>Staff_Confident_Offering_Tax_FreeR__c</fullName>
    <formula>VALUE(TEXT( Staff_Confident_Offering_Tax_Free__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Confident Offering Tax Free?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>