unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Staff_Cultural_Sales_Training__c.field-meta.xml
<CustomField>
    <fullName>Staff_Cultural_Sales_Training__c</fullName>
    <inlineHelpText>Have your staff participated in our cultural sales training programme? 5 if all staff have participated, 1 if no participation.</inlineHelpText>
    <label>Staff Cultural Sales Training?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>