unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Staff_Cultural_Sales_TrainingR__c.field-meta.xml
<CustomField>
    <fullName>Staff_Cultural_Sales_TrainingR__c</fullName>
    <formula>VALUE(TEXT( Staff_Cultural_Sales_Training__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Cultural Sales Training?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>