unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Stages_That_Disrupt_POS_Process__c.field-meta.xml
<CustomField>
    <fullName>Stages_That_Disrupt_POS_Process__c</fullName>
    <label>Any Stages That Disrupt POS Process?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>