unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Stakeholders_Involved_in_Planning__c.field-meta.xml
<CustomField>
    <fullName>Stakeholders_Involved_in_Planning__c</fullName>
    <label>Stakeholders Involved in Planning</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Retail Operations</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>