unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Statistical_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Statistical_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Statistical Reporting</label>
    <type>Checkbox</type>
</CustomField>