unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Strategy_to_Increase_Footfall__c.field-meta.xml
<CustomField>
    <fullName>Strategy_to_Increase_Footfall__c</fullName>
    <inlineHelpText>5 meaning strategy already in place, 1 no strategy.</inlineHelpText>
    <label>Any Strategy to Increase Footfall?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>