unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Strategy_to_Increase_FootfallR__c.field-meta.xml
<CustomField>
    <fullName>Strategy_to_Increase_FootfallR__c</fullName>
    <formula>VALUE(TEXT((Strategy_to_Increase_Footfall__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strategy to Increase Footfall?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>