unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Tax_Free_POS_Process__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_POS_Process__c</fullName>
    <inlineHelpText>How frictionless is the Tax Free POS process for customer and store staff? 5 being the best, 1 the worst.</inlineHelpText>
    <label>Tax Free POS Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>