unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Tax_Free_POS_ProcessR__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_POS_ProcessR__c</fullName>
    <formula>VALUE(TEXT( Tax_Free_POS_Process__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Free POS Process</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>