unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Tax_Free_Solution_Comparible__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_Solution_Comparible__c</fullName>
    <inlineHelpText>How would you rate our tax free solution compared with competitors? 5 is superior to competitors and 1 is inferior.</inlineHelpText>
    <label>Tax Free Solution Comparison</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>