unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Tax_Free_Solution_ComparisonR__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_Solution_ComparisonR__c</fullName>
    <formula>VALUE(TEXT(Tax_Free_Solution_Comparible__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Free Solution Comparison</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>