unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Technology_Head_Office__c.field-meta.xml
<CustomField>
    <fullName>Technology_Head_Office__c</fullName>
    <formula>(Tax_Free_Solution_ComparisonR__c + How_Innovative_is_Our_SolutionR__c) / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technology Head Office</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>