unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Technology_Management__c.field-meta.xml
<CustomField>
    <fullName>Technology_Management__c</fullName>
    <formula>(Ease_of_UseR__c + ReliabilityR__c + Quick_to_Respond_to_QueriesR__c + How_Quickly_Was_the_Issue_ResolvedR__c + Any_Stages_That_Disrupt_POS_ProcessR__c) / 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technology Management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>