unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Technology_Staff__c.field-meta.xml
<CustomField>
    <fullName>Technology_Staff__c</fullName>
    <formula>(Used_Planet_s_Technical_SupportR__c + What_Was_Your_ExperienceR__c + How_Quickly_Could_You_Reach_UsR__c +  How_Quickly_Was_the_Issue_ResolvedR__c) / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technology Staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>