unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Training_for_New_Hires__c.field-meta.xml
<CustomField>
    <fullName>Training_for_New_Hires__c</fullName>
    <inlineHelpText>Do your new hires receive TF sales training as part of the induction process? 5 means always, 1 never.</inlineHelpText>
    <label>Training for New Hires</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>