unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Training_for_New_HiresR__c.field-meta.xml
<CustomField>
    <fullName>Training_for_New_HiresR__c</fullName>
    <formula>VALUE(TEXT( Training_for_New_Hires__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training for New Hires</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>