unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Training_Head_Office__c.field-meta.xml
<CustomField>
    <fullName>Training_Head_Office__c</fullName>
    <formula>(Confident_of_Staff_TF_TrainingR__c + Training_Inline_With_TurnoverR__c + Training_for_New_HiresR__c + Rebate_Part_of_ProfitabilityR__c) / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Head Office</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>