unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Training_Inline_With_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Training_Inline_With_Turnover__c</fullName>
    <inlineHelpText>Do your staff receive TF and cultural sales training in line with staff turnover? 5 means all the time, 1 not at all.</inlineHelpText>
    <label>Training Inline With Staff Turnover?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>