unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Training_Inline_With_TurnoverR__c.field-meta.xml
<CustomField>
    <fullName>Training_Inline_With_TurnoverR__c</fullName>
    <formula>VALUE(TEXT( Training_Inline_With_Turnover__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Inline With Turnover?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>