unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Training_Management__c.field-meta.xml
<CustomField>
    <fullName>Training_Management__c</fullName>
    <formula>(Staff_Confident_Offering_Tax_FreeR__c + Training_Inline_With_TurnoverR__c + Training_for_New_HiresR__c +  Rebate_Part_of_ProfitabilityR__c) / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>