unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Training_Staff__c.field-meta.xml
<CustomField>
    <fullName>Training_Staff__c</fullName>
    <formula>(Confident_Offering_Tax_Free_ShoppingR__c + Challenges_with_Tax_FreeR__c) / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>