unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Used_Planet_s_Technical_Support__c.field-meta.xml
<CustomField>
    <fullName>Used_Planet_s_Technical_Support__c</fullName>
    <inlineHelpText>Have you used Planet&#39;s Technical Support Service? 5 means never or rarely, 1 means very frequently.</inlineHelpText>
    <label>Used Planet&#39;s Technical Support?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>